# mfbo

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  LICENSE.md  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yaml
docs/: requirements.txt
docs/source/: conf.py  index.md  installation.md  quickstart.md
docs/source/api/: ensembles.rst  gp.rst  index.rst  kernels.rst  nn.rst  posteriors.rst  utils.rst
docs/source/theory/: acquisition.rst  bo.rst  index.md  index.rst  optimizers.rst  practical.rst
docs/source/theory/surrogate/: index.rst
docs/source/theory/surrogate/multi-fidelity/: ada2mf.rst  agmfnet.rst  cokriging.rst  index.rst  mfnn.rst
docs/source/theory/surrogate/single-fidelity/: index.rst  kriging.rst  mlp.rst
docs/source/tutorials/: 01_forrester_single_objective.rst  02_modified_branin_single_objective.rst  03_hartmann3_single_objective.rst  04_two_member_truss_bi_objective.rst  index.md  index.rst
gp/: __init__.py  cokriging.py
gp/kernels/: __init__.py  kriging.py
mfbo/gp/: cokriging.py
mfbo/gp/kernels/: kriging.py
mfbo/nn/: ada2mf.py  agmfnet.py  mfnn.py  mlp.py
mfbo/nn/ensembles/: ada2mf.py  agmfnet.py  base.py  mfnn.py  mlp.py
mfbo/posteriors/: diag_normal.py
mfbo/utils/: __init__.py  init.py  shapes.py
nn/: __init__.py  ada2mf.py  agmfnet.py  mlp.py
nn/ensembles/: __init__.py  base.py  mlp.py
posteriors/: __init__.py  diag_normal.py
utils/: shapes.py
