[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfbo"
version = "0.1.0"
description = "Multi-fidelity surrogate models (NN ensembles and co-kriging) compatible with BoTorch."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Passakorn Paladaechanan" }
]

dependencies = [
  "torch>=2.5",
  "gpytorch>=1.15",
  "botorch>=0.16",
  "tqdm>=4.67",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "ruff>=0.15",
  "build>=1.2",
  "twine>=6.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mfbo*"]
